--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 	<head>
         <link rel="icon" href="data:;base64,=">
 		<meta charset="utf-8"/>
-		<script src="wasm_exec.js"></script>
-		<script>
-			const go = new Go();
-			WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
-				go.run(result.instance);
-			});
+		<script type="importmap">
+			{"imports": {"rxjs": "https://unpkg.com/@esm-bundle/rxjs/esm/es5/rxjs.min.js"}}
 		</script>
+		<!--<script src="https://unpkg.com/rxjs@%5E7/dist/bundles/rxjs.umd.min.js"></script>-->
+		<script src="wasm_exec.js"></script>
+		<script type="module" src="blap.js"></script>
+
 	</head>
-	<body></body>
+	<body>
+		<div id="count">x</div>
+	</body>
 </html>
