Add client and channel structs, and related plumbing.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 		</script>
 		<!--<script src="https://unpkg.com/rxjs@%5E7/dist/bundles/rxjs.umd.min.js"></script>-->
 		<script src="wasm_exec.js"></script>
-		<script type="module" src="blap.js"></script>
+		<script type="module" src="display.js"></script>
 
 	</head>
 	<body>
-		<div id="count">x</div>
 		<canvas id="draw" width="1024" height="768"></canvas>
 	</body>
 </html>
