--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		</script>
 		<!--<script src="https://unpkg.com/rxjs@%5E7/dist/bundles/rxjs.umd.min.js"></script>-->
 		<script src="wasm_exec.js"></script>
+		<script type="module" src="vector.js"></script>
 		<script type="module" src="display.js"></script>
 
 	</head>
