Create a src and bin folder.

--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 		<script type="importmap">
 			{"imports": {"rxjs": "https://unpkg.com/@esm-bundle/rxjs/esm/es5/rxjs.min.js"}}
 		</script>
-		<!--<script src="https://unpkg.com/rxjs@%5E7/dist/bundles/rxjs.umd.min.js"></script>-->
-		<script src="wasm_exec.js"></script>
-		<script type="module" src="patterns.js"></script>
-		<script type="module" src="vector.js"></script>
-		<script type="module" src="display.js"></script>
+		<script src="src/wasm_exec.js"></script>
+		<script type="module" src="src/patterns.js"></script>
+		<script type="module" src="src/vector.js"></script>
+		<script type="module" src="src/display.js"></script>
 
 	</head>
 	<body>
