Fix an inifinite loop bug. Separate tick counts for each simulation.

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 	</head>
 	<body>
 		<div class="text">
-			I'll start with a simple model for a database: it's a server that accepts interactions from clients.
+			We will start with a simple model for a database: it's a server that accepts interactions from clients.
 			<br>
 		</div>
-		<canvas id="draw" width="1920" height="1080"></canvas>
+		<canvas id="draw"></canvas>
 		<div class="text">
 			<br>
 			This is some follow-up text.
 			<br>
 		</div>
-		<canvas id="draw" width="1920" height="1080"></canvas>
+		<canvas id="draw"></canvas>
 	</body>
 </html>
