Adjust naming and change my mental model of how read/write requests are handled.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 <body>
 	<div class="text">
-		We will start with a simple model for a database: a server that responds to clients. Each request from a client
-		is called a transaction or request.
+		We will start with a simple model for a database: a server that responds to clients.
 		<br>
 	</div>
 	<canvas id="draw"></canvas>
