Finish impl of read requests.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 	<canvas id="draw"></canvas>
 	<div class="text">
 		<br>
-		Multiple clients can talk to a database.
+		Clients can also send read requests. The database responds with the current state of the requested data.
 		<br>
 	</div>
 	<canvas id="draw"></canvas>
 	<div class="text">
 		<br>
-		The above examples show clients sending write request to the database. Clients can also send read requests. The
-		database responds with the current state of the requested data.
+		Multiple clients can talk to a database.
 		<br>
 	</div>
+	<canvas id="draw"></canvas>
 </body>
 <script type="module" src="src/display.js"></script>
 
